--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-  "python.pythonPath": "venv/bin/python"
+  "python.pythonPath": "venv/bin/python",
+  "python.terminal.activateEnvironment": true,
+  "activateEnvironment": "source ./venv/bin/activate",
 }
